--- a/doctorpatientappointment/src/main/resources/application.properties
+++ b/doctorpatientappointment/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-
 spring.datasource.url=jdbc:mysql://localhost:3306/doctorappointmentplatform
 spring.datasource.username=root
 spring.datasource.password=ma123
 
 spring.jpa.show-sql=true
+
+spring.mvc.view.prefix=/WEB-INF/jsps/
+spring.mvc.view.suffix=.jsp
+
+server.servlet.context-path=/patientRegistration
