Logging for user registration and login
Logging for user registration and login

Updated Files

doctorUserController.java
patientUserController.java
application.properties

--- a/doctorpatientappointment/src/main/resources/application.properties
+++ b/doctorpatientappointment/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.mvc.view.prefix=/WEB-INF/jsps/
 spring.mvc.view.suffix=.jsp
 
 server.servlet.context-path=/patientRegistration
+
+logging.level.root=INFO
+
+
+
+logging.file=/doctorappointmentplatformlog/logs/doctorappointment.log
